--- a/thesis.css
+++ b/thesis.css
@@ -136,7 +136,7 @@ html, body {
 }
 
 .body-section--content > * {
-    margin-bottom: 25px;
+    /* margin-bottom: 25px; */
 }
 
 .body-links {
@@ -215,4 +215,6 @@ html, body {
 
 .nav-arrows {
     font-size: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
